third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/round-trip/public_mut_ref_downgrade.decompiled.public-struct.exp
processed 2 tasks
task 0 lines 3-16:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 error: undeclared `_v0`
   ┌─ TEMPFILE:14:9
   │
14 │         _v0
   │         ^^^


task 1 lines 19-19:  run 0xc0ffee::m_mut_ref_downgrade::foo
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
